Fixed a display issue where very long subject will go out of alignment in home page

--- a/note-ui/src/app/home/home.less
+++ b/note-ui/src/app/home/home.less
@@ -34,5 +34,18 @@
     height: 45px;
     line-height: 34px;
     font-size: 16px;
+
+    span {
+      overflow: hidden;
+      display: inline-block;
+      text-overflow: ellipsis;
+      width: 58%;
+      white-space: nowrap;
+      vertical-align: top;
+
+      @media only screen and (max-width: 380px) {
+        width: 45%;
+      }
+    }
   }
 }
